# OpenStudio-PAT

./: .bowerrc  .eslintrc  .gitignore  .gitlab-ci.yml  BuildPat.bat.in  CMakeLists.txt  CONTRIBUTING.md  README.md  TESTING.md  bower.json  copyright.txt  gulpfile.js  install_operations.qs  license.txt  manifest.json  package-lock.json  package.json  playwright-serial.config.ts  playwright.config.ts
.github/workflows/: build_pat.yaml  playwright.yml
.tmp/partials/: templateCacheHtml.js
.tmp/serve/: app.html  index.html
.tmp/serve/app/: index.css  index.module.js
app/: app.js  background.js  env.js  index.html  package-lock.json  package.json  spec.html
app/app/: .eslintrc  bootstrap.scss  index.config.js  index.menu.js  index.module.js  index.route.js  index.run.js  index.scss
app/app/analysis/: analysis.html  analysisController.js  analysis_algorithmic.html  analysis_manual.html  checkAllTemplate.html  deleteButtonTemplate.html  delete_measure.html  duplicate_measure.html  edit_md_choice_arg.html  edit_option_description.html  modalDeleteMeasureController.js  modalDuplicateMeasureController.js  modalEditModelDependentChoiceArgController.js  modalEditOptionDescriptionController.js  modalSelectOptionsController.js  optionInputTemplate.html  selectOptions.html
app/app/bcl/: addButtonTemplate.html  bcl.html  bclService.js  create_new_measure.html  display_errors.html  duplicate_measure.html  editButtonTemplate.html  editButtonTemplateOld.html  locationTemplate.html  modalBclController.js  modalCreateNewMeasureController.js  modalDisplayErrorsController.js  modalDuplicateMeasureController.js  modalUpdateMeasureController.js  tempEditButtonTemplate.html  updateButtonTemplate.html  update_measure.html
app/app/dependency_manager/: dependencyManagerService.js
app/app/design_alts/: clearDatapoint.html  deleteButtonTemplate.html  designAlternatives.html  designAlternativesController.js  (+2 more)
app/electron/: .eslintrc  background.js  browsersync_helper.js  context_menu.js  dev_helper.js  env.js  external_links.js  menu.js  window.js  window_state.js
ci/: install_script_qtifw.qs
config/: env_development.json
playwright/: .prettierrc.yaml  App.ts  config-reporter.ts  constants.ts  electron-app-manager.ts  paths.ts  shared-tests.ts
playwright/constants/: expected-analysis-by-project.ts  expected-analysis-type-by-project.ts  expected-datapoints-by-project.ts  expected-datapoints-state.ts  expected-design-alts-by-project.ts  expected-details-by-page.ts  expected-menu-items.ts  expected-outputs-by-project.ts  index.ts  projects.ts  report-view.ts  toast-levels.ts
playwright/mocks/: expected-details-by-page.ts  index.ts  ipc-main-handle.mocks.ts  projects.mocks.ts
playwright/page-objects/: base.po.ts  index.ts  nav.po.ts
playwright/tests/: analysis-page.spec.ts  design-alternatives-page.spec.ts  nav.spec.ts  outputs-page.spec.ts  reports-page.spec.ts  run-page.spec.ts  select-project-modal.spec.ts  server-page.spec.ts  server-tools-modal.spec.ts  server-tools.spec.ts  shared.spec.ts  window.spec.ts
sample_projects/: README.md
sample_projects/Office_HVAC/: Office_HVAC.json  pat.json
sample_projects/Office_Study/: Office_Study.json  pat.json
sample_projects/SEB_CSVs/: SEB_Diag_2013.csv  SEB_LHS_2013.csv  SEB_LHS_2013_discrete.csv  SEB_Morris_2013.csv  SEB_Sobol_2013.csv  SEB_calibration_OPTIM_2013.csv  SEB_calibration_PSO_2013.csv  SEB_calibration_RepeatRun_2013.csv  SEB_calibration_Rgenoud_2013.csv  SEB_calibration_SingleRun_2013.csv
sample_projects/SEB_Diag_2013/: SEB_Diag_2013.json  pat.json
sample_projects/SEB_LHS_2013/: SEB_LHS_2013.json  SEB_Test_cluster.json  pat.json
sample_projects/SEB_LHS_2013_discrete/: pat.json
sample_projects/SEB_Morris_2013/: SEB_Morris_2013.json  Test_cluster.json
sample_projects/SEB_Sobol_2013/: SEB_Sobol_2013.json  SEB_Test_cluster.json
sample_projects/SEB_calibration_DOE_2013/: SEB_calibration_DOE_2013.json  pat.json
sample_projects/SEB_calibration_NSGA_2013/: SEB_calibration_NSGA_2013.json  pat.json
sample_projects/SEB_calibration_OPTIM_2013/: SEB_calibration_OPTIM_2013.json  pat.json
sample_projects/SEB_calibration_PSO_2013/: SEB_calibration_PSO_2013.json
sample_projects/SEB_calibration_RepeatRun_2013/: SEB_calibration_RepeatRun_2013.json
sample_projects/SEB_calibration_Rgenoud_2013/: SEB_calibration_Rgenoud_2013.json  pat.json
sample_projects/SEB_calibration_SPEA_2013/: SEB_calibration_SPEA_2013.json  pat.json
sample_projects/SEB_calibration_SingleRun_2013/: SEB_calibration_SingleRun_2013.json  pat.json
sample_projects/fmu_test/: FMU test.json  pat.json
sample_projects/fmu_test_cli/: FMU test_cli.json  pat.json
sample_projects/fmu_test_scripts/: FMU test.json  pat.json
sample_projects/mo/: HelloWorld.fmu  dc-test.ssp  dc_tool.ssp  dc_tool__.ssp  run_ssp2.py
sample_projects/run_ssp/: run_ssp2.py
sample_projects/seeds/: SmallOffProto.osm  empty.osm
tasks/: .eslintrc  build.js  build.old.js  conf.js  generate_specs_import.js  inject.js  release.js  release_linux.js  release_osx.js  release_windows.js  scripts.js  start.js  styles.js  tmpTestFiles.js  utils.js  watch.js
undefined/: the_projectpat.json  undefinedpat.json
(+275 files in other folders)
